Changelog
=========

4.1.2 (unreleased)
------------------

- Nothing changed yet.


4.1.1 (2020-12-03)
------------------

- Fix upgrade-step.
  [cekk]

4.0.8 (2020-12-03)
------------------

- Fix indexes names.
  [cekk]


4.0.7 (2020-04-21)
------------------

- Spaces and styles for bando state label in bandi-search
  [nzambello]


4.0.6 (2020-02-14)
------------------

- Reduced and adapted font-size and spaces for bando state label
  [nzambello]


4.0.5 (2020-02-07)
------------------

- (a11y) changed bando state label color for color contrast
  [nzambello]


4.0.4 (2019-12-17)
------------------

- Install plone.restapi when installing product.
  [cekk]
- Fix dates in search view (#20711).
  [cekk]

4.0.3 (2019-12-05)
------------------

- Fix translations
  [cekk]

4.0.2 (2019-12-05)
------------------

- Revert last tag.
  [cekk]
- Fix tile bando title padding
  [nzambello]

4.0.1 (2019-11-28)
------------------

- Fix search view url.
  [cekk]

4.0.0 (2019-11-28)
------------------

- Python 3 compatibility.
  [cekk]
- New bandi search view
  [cekk][nzambello]
- Change bando fields: dropped `ente_bando`, add `materie` and `finanziatori`.
  [cekk]
- Bando categorization fields vocabularies have now a pre-defined static list of values.
  [cekk]

3.0.15 (2019-02-11)
-------------------

- Add IShortName behavior fo Folder Deepening.
  [cekk]


3.0.14 (2019-01-30)
-------------------

- Added translations for bando status [nzambello]


3.0.13 (2019-01-28)
-------------------

- Added bando status info in item view [nzambello]
- Fixed responsive layout [nzambello]


3.0.12 (2018-12-05)
-------------------

- Fix querystring generation for rss search view.
  [cekk]

3.0.11 (2018-12-05)
-------------------

- Removed plone.directives import.
  [daniele]

3.0.10 (2018-11-20)
-------------------

- Remove unused translations.
  [cekk]

3.0.9 (2018-11-20)
------------------

- Fix translations.
  [cekk]

3.0.8 (2018-02-26)
------------------
