@@ -28,6 +28,7 @@
 
   <!-- Include the sub-packages that use their own configure.zcml files. -->
   <include package=".browser" />
+  <include package=".adapters" />
   <include package=".content" />
   <include package=".portlets" />
   <include package=".services" />
