@@ -4,7 +4,8 @@ Changelog
 4.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add support for rer.sitesearch custom fields.
+  [cekk]
 
 
 4.1.1 (2020-12-03)
